--- a/package.json
+++ b/package.json
@@ -25,26 +25,29 @@
   },
   "dependencies": {
     "apollo-datasource-rest": "^0.6.1",
-    "apollo-server": "^2.7.2",
+    "apollo-server-koa": "^2.8.1",
     "apollo-server-plugin-response-cache": "^0.3.1",
     "graphql": "^14.4.2",
     "graphql-import": "^0.7.1",
+    "koa": "^2.7.0",
+    "pino": "^5.13.2",
     "ramda": "^0.26.1",
     "sha.js": "^2.4.11"
   },
   "devDependencies": {
     "@bitjson/npm-scripts-info": "^1.0.0",
     "@types/graphql": "^14.2.3",
+    "@types/koa": "^2.0.49",
+    "@types/pino": "^5.8.8",
     "@types/ramda": "types/npm-ramda#dist",
     "ava": "2.2.0",
     "codecov": "^3.5.0",
     "cz-conventional-changelog": "^3.0.2",
-    "gh-pages": "^2.0.1",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "prettier": "^1.18.2",
-    "standard-version": "^6.0.1",
+    "standard-version": "^7.0.0",
     "trash-cli": "^3.0.0",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
@@ -72,4 +75,3 @@
     ]
   }
 }
-
